--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "webpack serve --env port=3000",
 		"build:prod": "webpack --env mode=production",
-		"build:dev": "webpack --env mode=development"
+		"build:dev": "webpack --env mode=development",
+ 		"lint": "eslint \"src/**/*.{ts,tsx}\"",
+  		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,7 +16,6 @@
 	"devDependencies": {
 		"@babel/core": "^7.17.5",
 		"@babel/preset-env": "^7.16.11",
-		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
 		"@svgr/webpack": "^6.2.1",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.39",
@@ -22,13 +23,20 @@
 		"@types/react-router-dom": "^5.3.3",
 		"@types/webpack": "^5.28.0",
 		"@types/webpack-dev-server": "^4.7.2",
+		"@typescript-eslint/eslint-plugin": "^5.12.1",
+		"@typescript-eslint/parser": "^5.12.1",
 		"babel-loader": "^8.2.3",
 		"babel-plugin-i18next-extract": "^0.8.3",
 		"css-loader": "^6.6.0",
+		"eslint": "^8.10.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-react": "^7.29.2",
+		"eslint-plugin-react-hooks": "^4.3.0",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"mini-css-extract-plugin": "^2.5.3",
-		"react-refresh": "^0.10.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
@@ -37,7 +45,9 @@
 		"typescript": "^4.5.5",
 		"webpack": "^5.69.1",
 		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.7.4"
+		"webpack-dev-server": "^4.7.4",
+		"react-refresh": "^0.10.0",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5"
 	},
 	"dependencies": {
 		"i18next": "^21.6.11",
