--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
 		"dev": "webpack serve --env port=3000",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
- 		"lint": "eslint \"src/**/*.{ts,tsx}\"",
-  		"lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix"
+ 		"lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
+  		"lint:ts:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+		"lint:scss": "npx stylelint \"**/*.scss\"",
+    	"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"devDependencies": {
+  	"devDependencies": {
 		"@babel/core": "^7.17.5",
 		"@babel/preset-env": "^7.16.11",
 		"@svgr/webpack": "^6.2.1",
@@ -30,6 +32,7 @@
 		"css-loader": "^6.6.0",
 		"eslint": "^8.10.0",
 		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-i18next": "^5.1.2",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-react": "^7.29.2",
@@ -40,6 +43,8 @@
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
+		"stylelint": "^14.5.3",
+		"stylelint-config-standard-scss": "^3.0.0",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5",
@@ -48,8 +53,8 @@
 		"webpack-dev-server": "^4.7.4",
 		"react-refresh": "^0.10.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5"
-	},
-	"dependencies": {
+  	},
+  	"dependencies": {
 		"i18next": "^21.6.11",
 		"i18next-browser-languagedetector": "^6.1.3",
 		"i18next-http-backend": "^1.3.2",
@@ -57,5 +62,5 @@
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.15.5",
 		"react-router-dom": "^6.2.1"
-	}
+  	}
 }
