--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
 		"dev": "webpack serve --env port=3000",
 		"build:prod": "webpack --env mode=production",
 		"build:dev": "webpack --env mode=development",
- 		"lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
-  		"lint:ts:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+		"lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
+		"lint:ts:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
 		"lint:scss": "npx stylelint \"**/*.scss\"",
-    	"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+		"lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+		"unit": "jest --config ./config/jest/jest.config.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-  	"devDependencies": {
+	"devDependencies": {
 		"@babel/core": "^7.17.5",
 		"@babel/preset-env": "^7.16.11",
+		"@babel/preset-typescript": "^7.16.7",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
 		"@svgr/webpack": "^6.2.1",
+		"@types/jest": "^27.4.1",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.39",
 		"@types/react-dom": "^17.0.11",
@@ -39,7 +43,9 @@
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"jest": "^27.5.1",
 		"mini-css-extract-plugin": "^2.5.3",
+		"react-refresh": "^0.10.0",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
@@ -50,11 +56,9 @@
 		"typescript": "^4.5.5",
 		"webpack": "^5.69.1",
 		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.7.4",
-		"react-refresh": "^0.10.0",
-		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.5"
-  	},
-  	"dependencies": {
+		"webpack-dev-server": "^4.7.4"
+	},
+	"dependencies": {
 		"i18next": "^21.6.11",
 		"i18next-browser-languagedetector": "^6.1.3",
 		"i18next-http-backend": "^1.3.2",
@@ -62,5 +66,5 @@
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.15.5",
 		"react-router-dom": "^6.2.1"
-  	}
+	}
 }
