--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         // Подсвечивает все места где не указан тип
         // Однако это не означает, что теперь вовсе нельзя использовать any.
         // Это означает лишь, что в подобных ситуация разработчик должен явно писать any,
+        // "strict": true,
         "noImplicitAny": true,
         "module": "ESNext",
         // В какую спецификацию компилируем: для поддержки большинства браузеров
@@ -15,7 +16,9 @@
         // Для абсолютного импорта
         "baseUrl": ".",
         "paths": {
-            "*": ["./src/*"]
+            "*": [
+                "./src/*"
+            ]
         },
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
