features: add ts strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,11 @@
         "moduleResolution": "node",
         // Для абсолютного импорта
         "baseUrl": ".",
+        "strict": true,
         "paths": {
-            "*": ["./src/*"]
+            "*": [
+                "./src/*"
+            ]
         },
         // esModuleInterop позволяет работать с пакетами, которые используют
         // common js как с обычными пакета с помощью import (require() module.export) = common js
