--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "webpack serve --env port=3000",
         "dev:server": "node ./json-server/index.js",
+        "dev:start": "concurrently \"npm run dev\" \"npm run dev:server\"",
         "build:prod": "webpack --env mode=production",
         "build:dev": "webpack --env mode=development",
         "lint:ts": "eslint \"**/*.{ts,tsx}\"",
@@ -28,6 +29,7 @@
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "@storybook/addon-actions": "^6.4.19",
         "@storybook/addon-essentials": "^6.4.19",
         "@storybook/addon-interactions": "^6.4.19",
@@ -71,6 +73,7 @@
         "loki": "^0.35.1",
         "mini-css-extract-plugin": "^2.5.3",
         "prettier": "^2.7.1",
+        "react-refresh": "^0.12.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
@@ -88,6 +91,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.0",
         "axios": "^0.26.1",
+        "concurrently": "^9.2.1",
         "i18next": "^21.6.11",
         "i18next-browser-languagedetector": "^6.1.3",
         "i18next-http-backend": "^1.3.2",
